--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,12 @@ header {
     padding: 20px 0 20px 0;
 }
 
-input {
-    
+.cities {
+    display:flex;
+    flex-direction: column;
+}
+
+.location {
+    border: 3px solid black;
 
 }
