--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ header {
     justify-content: space-around;
 }
 
-.location {
+.current-location {
     border: 3px solid black;
     display:flex;
     flex-direction: column;
